# medspacy-unqlite

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_publish.yml  test_build.yaml  test_pip.yml  tests.yaml
wheelhouse/: medspacy_unqlite-0.9.8-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  medspacy_unqlite-0.9.8-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
