[metadata]
description = Fast Python bindings for the UnQLite embedded NoSQL database.
url = https://github.com/medspacy/unqlite-python
author = Charles Leifer, medspacy
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
project_urls =
    Release notes = https://github.com/medspacy/unqlite-python/releases
    Source = https://github.com/medspacy/unqlite-python
